# oxide

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.docker.toml  config.example.toml  config.server.toml  config.test.toml  config.toml  docker-compose.server.yml  docker-compose.yml  package.json
.github/workflows/: ci.yml  release.yml
scripts/: flaky-backend.js  k6-stress.js  mock-backend.js  test-ws.js  toy-backend.js  traffic.js
src/: admin.rs  balancer.rs  config.rs  configfile.rs  events.rs  health.rs  main.rs  proxy.rs  router.rs  tls.rs
web/: Dockerfile  next.config.mjs  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: ControlPanel.tsx  Explainer.tsx  InfraDiagram.tsx  LogFeed.tsx  MetricsPanel.tsx  StatsBar.tsx  TestTraffic.tsx
web/app/lib/: api.ts  useOxide.ts
