[package]
name = "oxide"
version = "0.5.0"
edition = "2021"
description = "Un reverse proxy / load balancer HTTP escrito en Rust"
license = "Apache-2.0"

[dependencies]
# Runtime asíncrono: maneja miles de conexiones concurrentes sin un thread por cada una
tokio = { version = "1", features = ["full"] }
# Librería HTTP de bajo nivel (servidor + cliente)
hyper = { version = "1", features = ["full"] }
# Utilidades que conectan hyper con tokio (cliente con pool, adaptadores de IO)
hyper-util = { version = "0.1", features = ["full"] }
# Helpers para construir y transformar bodies HTTP
http-body-util = "0.1"
bytes = "1"
# Parseo de la configuración (config.toml -> structs de Rust)
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Edición del config.toml preservando formato/comentarios (panel de control)
toml_edit = "0.22"
# Para serializar el endpoint de estado y los eventos a JSON
serde_json = "1"
# WebSocket sobre hyper (para el dashboard en vivo)
hyper-tungstenite = "0.18"
# Utilidades de streams/sinks (split del websocket, send/next)
futures-util = "0.3"
# TLS (HTTPS). Usamos el proveedor de cripto 'ring' (más liviano de compilar).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2"
# Generación de certificados self-signed para desarrollo
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# Logging estructurado
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Manejo de errores ergonómico
anyhow = "1"
# Swap atómico del router sin locks (para recarga de config en caliente)
arc-swap = "1"

[profile.release]
opt-level = 3
lto = true
